p2/confs/app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  type: ClusterIP
  selector:
    app: app-two
  ports:
  - port: 80
    targetPort: 8080
